[package]
name = "telos"
version = "0.1.0"
authors = ["equalsraf"]
description = "Rust bindings for libressl's libtls"
repository = "https://github.com/equalsraf/telos"
license = "ISC"

[dependencies]
libc = "0.2"
chrono = "0.2"

[dependencies.tls-sys]
path = "../tls-sys"
version = "0.1.0"

[dev-dependencies]
docopt = "0.6"
rustc-serialize = "0.3"

[target.i686-pc-windows-gnu.dependencies]
ws2_32-sys = "0.2"
[target.x86_64-pc-windows-gnu.dependencies]
ws2_32-sys = "0.2"
